Parse RMAN files using vtables
Fixes #19